# SmartFileOrganizer

./: .gitignore  README.md  plan-smartFileOrganizer.prompt.md  plan.md  pyproject.toml
config/: rules.yaml  settings.yaml
scripts/: install_service.py  uninstall_service.py
src/: __init__.py
src/core/: __init__.py  debouncer.py  dispatcher.py  ipc_server.py  main.py  mover.py  watcher.py
src/core/analyzer/: __init__.py  ai_engine.py  content_reader.py  rule_engine.py
src/core/service/: __init__.py  unix_daemon.py  windows_service.py
src/shared/: __init__.py  config.py  constants.py  logging.py  models.py
src/ui/: __init__.py  dashboard.py  ipc_client.py  main.py  rules_editor.py  tray.py
tests/: conftest.py
tests/integration/: test_dispatcher.py  test_ipc.py
tests/unit/: test_ai_engine.py  test_config.py  test_logging.py  test_models.py  test_mover.py  test_rule_engine.py  test_watcher.py
