[project]
name = "smart-file-organizer"
version = "0.1.0"
description = "Intelligent file organizer that monitors folders and automatically sorts files using rules + local AI"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "David Mendonca" }
]
dependencies = [
    "watchdog>=4.0.0",
    "pydantic>=2.7.0",
    "pyyaml>=6.0.1",
    "structlog>=24.1.0",
    "pyzmq>=26.0.0",
]

[project.optional-dependencies]
ai = [
    "ollama>=0.3.0",
    "pymupdf>=1.24.0",
]
ui = [
    "PyQt6>=6.7.0",
]
service-windows = [
    "pywin32>=306",
]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.5.0",
]
all = [
    "smart-file-organizer[ai,ui,dev]",
]

[project.scripts]
sfo-core = "src.core.main:main"
sfo-ui = "src.ui.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "S",    # flake8-bandit (security)
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
]
ignore = [
    "S101",  # allow assert in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S106", "S108"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"
